INTYG-6161: Initiell commit av AFMU-intyget baserad på LISJP, det mesta lisjp bortstädat

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include ':luse'
 include ':lisjp'
 include ':luae_na'
 include ':luae_fs'
+include ':af_mu'
 include ':ts-parent'
 include ':ts-bas'
 include ':ts-diabetes'
@@ -39,6 +40,7 @@ project(':luse').projectDir = "$rootDir/fk/luse" as File
 project(':lisjp').projectDir = "$rootDir/fk/lisjp" as File
 project(':luae_na').projectDir = "$rootDir/fk/luae_na" as File
 project(':luae_fs').projectDir = "$rootDir/fk/luae_fs" as File
+project(':af_mu').projectDir = "$rootDir/fk/af_mu" as File
 project(':ts-parent').projectDir = "$rootDir/ts/ts-parent" as File
 project(':ts-bas').projectDir = "$rootDir/ts/ts-bas" as File
 project(':ts-diabetes').projectDir = "$rootDir/ts/ts-diabetes" as File
