--- a/af/afmu/build.gradle
+++ b/af/afmu/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(":integration-util")
     compile project(":common-services")
     compile project(":common-schemas")
+    compile project(":common-pdf")
 
     compile project(":af-parent")
 
