--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 ext {
-    intygClinicalprocessSchematronVersion = "1.0.28"
-    intygCertificateSchemasVersion = "1.0.12"
+    intygClinicalprocessSchematronVersion = "1.0.29"
+    intygCertificateSchemasVersion = "1.0.13-beta2"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "3.2.0-RC3"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
