--- a/ts/ts-diabetes-2/build.gradle
+++ b/ts/ts-diabetes-2/build.gradle
@@ -1,16 +1,6 @@
 dependencies {
-    compile project(":common-support")
-    compile project(":common-web")
-    compile project(":integration-util")
-    compile project(":common-services")
-    compile project(":common-schemas")
+    compile project(':ts-parent')
     compile project(":common-pdf")
-
-    compile "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
-    compile "se.inera.intyg.clinicalprocess.healthcond.certificate:intyg-clinicalprocess-healthcond-certificate-schematron:${intygClinicalprocessSchematronVersion}"
-
-    compile "com.helger:ph-schematron:${phSchematronVersion}"
-    compile "org.springframework:spring-tx:${springVersion}"
 
     compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
     apt "com.google.auto.value:auto-value:${autovalueVersion}"
