INTYG-6989: Hämta mottagare per intyg och inte (som tidigare) per intygstyp

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 ext {
     intygClinicalprocessSchematronVersion = "1.0.29"
-    intygCertificateSchemasVersion = "1.0.13-beta8"
+    //intygClinicalprocessSchemasVersion = "1.0.13-beta8"
+    intygClinicalprocessSchemasVersion = "0-SNAPSHOT"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "3.2.0-RC3"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
