--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ plugins {
 
 ext {
     intygClinicalprocessSchematronVersion = "1.0.29"
-    //intygClinicalprocessSchemasVersion = "1.0.13-beta8"
-    intygClinicalprocessSchemasVersion = "0-SNAPSHOT"
+    intygClinicalprocessSchemasVersion = "1.0.14"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "3.2.0-RC3"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
