INTYG-6980: Ts-bas till auto value.

--- a/ts/ts-bas/build.gradle
+++ b/ts/ts-bas/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
   compile project(':ts-parent')
+
+  compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
+  apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
