INTYG-6982: Generell utskrift ts-bas

--- a/ts/ts-bas/build.gradle
+++ b/ts/ts-bas/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   compile project(':ts-parent')
+  compile project(":common-pdf")
 
   compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
   apt "com.google.auto.value:auto-value:${autovalueVersion}"
