--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 ext {
     intygClinicalprocessSchematronVersion = "1.0.30-beta2"
-    intygClinicalprocessSchemasVersion = "1.0.14"
+    intygClinicalprocessSchemasVersion = "0-SNAPSHOT" //"1.0.14"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "3.2.0-RC3"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
