--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ plugins {
 }
 
 ext {
-    intygClinicalprocessSchematronVersion = "1.0.30-beta5"
+    intygClinicalprocessSchematronVersion = "1.0.30"
     intygClinicalprocessSchemasVersion = "1.0.15"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
-    rivtaClinicalprocessSchemasVersion = "4.0-beta3" //"3.2.0-RC3"
+    rivtaClinicalprocessSchemasVersion = "4.0"
     rivtaInsuranceprocessSchemasVersion = "3.1.0.4"
 
     schemasContractVersion = "2.1.7"
