INTYG-7238: Skapat upp skelettet med ag-parent samt ag114 som namn

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,8 @@ include ':ts-diabetes-2'
 include ':sos_parent'
 include ':db'
 include ':doi'
+include ':ag-parent'
+include ':ag114'
 
 project(':logging-util').projectDir = "$rootDir/util/logging-util" as File
 project(':common-support').projectDir = "$rootDir/support" as File
@@ -53,3 +55,5 @@ project(':ts-diabetes-2').projectDir = "$rootDir/ts/ts-diabetes-2" as File
 project(':sos_parent').projectDir = "$rootDir/sos/sos_parent" as File
 project(':db').projectDir = "$rootDir/sos/db" as File
 project(':doi').projectDir = "$rootDir/sos/doi" as File
+project(':ag-parent').projectDir = "$rootDir/skl/ag-parent" as File
+project(':ag114').projectDir = "$rootDir/skl/ag114" as File
