--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    intygClinicalprocessSchematronVersion = "1.0.31-beta1"
+    intygClinicalprocessSchematronVersion = "0-SNAPSHOT" //"1.0.31-beta1"
     intygClinicalprocessSchemasVersion = "1.0.16"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "4.0"
@@ -75,7 +75,7 @@ allprojects {
     }
 }
 
-configure(subprojects.findAll {['fk7263', 'ts-bas', 'ts-diabetes', 'ts-diabetes-2', 'lisjp', 'luse', 'luae_fs', 'luae_na', 'db', 'doi', 'af00213'].contains(it.name)}) {
+configure(subprojects.findAll {['fk7263', 'ts-bas', 'ts-diabetes', 'ts-diabetes-2', 'lisjp', 'luse', 'luae_fs', 'luae_na', 'db', 'doi', 'af00213', 'ag114'].contains(it.name)}) {
     apply plugin: 'com.moowork.grunt'
 
     grunt {
