--- a/ts/ts-diabetes/build.gradle
+++ b/ts/ts-diabetes/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
   compile project(':ts-parent')
+  compile project(":common-pdf")
+
+  compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
+  apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
