--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    intygClinicalprocessSchematronVersion = "1.0.31-beta1"
+    intygClinicalprocessSchematronVersion = "1.0.31-beta2"
     intygClinicalprocessSchemasVersion = "1.0.16"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "4.0"
@@ -17,6 +17,7 @@ ext {
     cxfVersion = "3.1.3"
     fkEIntygAdapterVersion = "2.2-RC3-INTYG"
     guavaVersion = "24.1-jre"
+    commonsLang3Version = "3.8.1"
     itextVersion = "5.5.8"
     jacksonVersion = "2.8.1"
     logbackVersion = "1.2.3"
