--- a/ts/ts-diabetes/build.gradle
+++ b/ts/ts-diabetes/build.gradle
@@ -2,6 +2,7 @@ dependencies {
   compile project(':ts-parent')
   compile project(":common-pdf")
 
+  compile "org.apache.commons:commons-lang3:${commonsLang3Version}"
   compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
   apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
