INTYG-7246: Generell utskrift för ag1-14 WC

--- a/skl/ag-parent/build.gradle
+++ b/skl/ag-parent/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     compile project(":common-support")
     compile project(":common-web")
+    compile project(":common-pdf")
     compile project(":integration-util")
     compile project(":common-services")
     compile project(":common-schemas")
