INTYG-7582: lagt till validering på att sjukskrivningsgrad är en giltig integer mellan 0-100

--- a/skl/ag-parent/build.gradle
+++ b/skl/ag-parent/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile "org.springframework:spring-tx:${springVersion}"
 
     compile "com.google.auto.value:auto-value:${autovalueVersion}"
+    compile "org.apache.commons:commons-lang3:${commonsLang3Version}"    
 
     apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
