--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 ext {
-    intygClinicalprocessSchematronVersion = "1.0.31-beta11"
+    intygClinicalprocessSchematronVersion = "1.0.31"
     intygClinicalprocessSchemasVersion = "1.0.16"
     intygTransportstyrelsenSchemasVersion = "1.0.4"
     rivtaClinicalprocessSchemasVersion = "4.0"
