--- a/support/build.gradle
+++ b/support/build.gradle
@@ -12,5 +12,7 @@ dependencies {
 
   compile "com.google.auto.value:auto-value:${autovalueVersion}"
 
+  testCompile "org.assertj:assertj-core:${assertjVersion}"
+
   apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
