--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext {
     fkEIntygAdapterVersion = "2.2-RC3-INTYG"
     guavaVersion = "24.1-jre"
     commonsLang3Version = "3.8.1"
+    commonsTextVersion = "1.6"
     itextVersion = "5.5.8"
     jacksonVersion = "2.8.1"
     logbackVersion = "1.2.3"
