--- a/pdf/build.gradle
+++ b/pdf/build.gradle
@@ -8,6 +8,8 @@ dependencies {
   compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
   compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
 
+  compile "org.apache.commons:commons-text:${commonsTextVersion}"
+
   compile "commons-io:commons-io:2.4"
   compile "com.itextpdf:itext7-core:7.1.1"
 }
