INTYG-6762: Inför funktionealitet för att skapa AG7804 utkast baserat på signerat lisjp intyg. Dels automatiskt vid CreateDraftCertificate men även manuellt via knapp i header

--- a/skl/ag7804/build.gradle
+++ b/skl/ag7804/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
     compile project(':ag-parent')
+    compile project(':fk-parent')
+    compile project(':lisjp')
 
     compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
     apt "com.google.auto.value:auto-value:${autovalueVersion}"
