--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ ext {
     cxfVersion = "3.1.3"
     fkEIntygAdapterVersion = "2.2-RC3-INTYG"
     guavaVersion = "24.1-jre"
+    commonsCollectionsVersion = "4.2"
     commonsLang3Version = "3.8.1"
     commonsTextVersion = "1.6"
     itextVersion = "5.5.8"
