--- a/ts/ts-parent/build.gradle
+++ b/ts/ts-parent/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile "com.itextpdf:itextpdf:${itextVersion}"
     compile "com.helger:ph-schematron:${phSchematronVersion}"
     compile "org.springframework:spring-tx:${springVersion}"
+    compile "org.apache.commons:commons-collections4:${commonsCollectionsVersion}"
 
     compile "se.riv.insuranceprocess.healthreporting:insuranceprocess-healthreporting-schemas:${rivtaInsuranceprocessSchemasVersion}"
     compile "se.inera.intyg.transportstyrelsen:intyg-transportstyrelsen-schemas:${intygTransportstyrelsenSchemasVersion}"
