--- a/support/build.gradle
+++ b/support/build.gradle
@@ -9,6 +9,7 @@ dependencies {
   compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
   compile "com.google.guava:guava:${guavaVersion}"
   compile "net.sf.saxon:Saxon-HE:${saxonVersion}"
+  compile "org.apache.commons:commons-csv:${commonsTextVersion}"
 
   compile "com.google.auto.value:auto-value:${autovalueVersion}"
 
