DEVENV: tester tillagda för internal-transport konvertering för tstrk1009

--- a/ts/tstrk1009/build.gradle
+++ b/ts/tstrk1009/build.gradle
@@ -2,6 +2,8 @@ dependencies {
   compile project(':ts-parent')
   compile project(":common-pdf")
 
+  testCompile "org.assertj:assertj-core:${assertjVersion}"
+  
   compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
   apt "com.google.auto.value:auto-value:${autovalueVersion}"
 }
