INTYG-7227: bumpar gradle-wrapper till 5.1.1

--- a/af/af00251/build.gradle
+++ b/af/af00251/build.gradle
@@ -6,7 +6,8 @@ dependencies {
 
     compile "com.google.auto.value:auto-value:${autovalueVersion}"
 
-    apt "com.google.auto.value:auto-value:${autovalueVersion}"
+    compile "com.google.auto.value:auto-value:${autovalueVersion}"
+annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
     compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
     
     testCompile "org.hamcrest:hamcrest-library:1.3"
