--- a/fk/fk-parent/build.gradle
+++ b/fk/fk-parent/build.gradle
@@ -14,5 +14,6 @@ dependencies {
 
     compile "com.google.auto.value:auto-value:${autovalueVersion}"
 
-    apt "com.google.auto.value:auto-value:${autovalueVersion}"
+    compile "com.google.auto.value:auto-value:${autovalueVersion}"
+annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
 }
