--- a/af/af00213/build.gradle
+++ b/af/af00213/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 
     compile "com.google.auto.value:auto-value:${autovalueVersion}"
 
-    apt "com.google.auto.value:auto-value:${autovalueVersion}"
+    compile "com.google.auto.value:auto-value:${autovalueVersion}"
+    annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
     compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
 }
