--- a/skl/ag-parent/build.gradle
+++ b/skl/ag-parent/build.gradle
@@ -16,5 +16,6 @@ dependencies {
     compile "com.google.auto.value:auto-value:${autovalueVersion}"
     compile "org.apache.commons:commons-lang3:${commonsLang3Version}"    
 
-    apt "com.google.auto.value:auto-value:${autovalueVersion}"
+    compile "com.google.auto.value:auto-value:${autovalueVersion}"
+annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
 }
