--- a/sos/db/build.gradle
+++ b/sos/db/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     compile project(':sos_parent')
 
     compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
-    apt "com.google.auto.value:auto-value:${autovalueVersion}"
+    compile "com.google.auto.value:auto-value:${autovalueVersion}"
+annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
 }
 
