--- a/sos/doi/build.gradle
+++ b/sos/doi/build.gradle
@@ -2,5 +2,6 @@ dependencies {
   compile project(':sos_parent')
 
     compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
-    apt "com.google.auto.value:auto-value:${autovalueVersion}"
+    compile "com.google.auto.value:auto-value:${autovalueVersion}"
+annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
 }
