--- a/support/build.gradle
+++ b/support/build.gradle
@@ -15,5 +15,6 @@ dependencies {
 
   testCompile "org.assertj:assertj-core:${assertjVersion}"
 
-  apt "com.google.auto.value:auto-value:${autovalueVersion}"
+  compile "com.google.auto.value:auto-value:${autovalueVersion}"
+annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
 }
