--- a/ts/ts-bas/build.gradle
+++ b/ts/ts-bas/build.gradle
@@ -3,5 +3,6 @@ dependencies {
   compile project(":common-pdf")
 
   compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
-  apt "com.google.auto.value:auto-value:${autovalueVersion}"
+  compile "com.google.auto.value:auto-value:${autovalueVersion}"
+annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
 }
