DEVENV: lagt till i build.gradle att sätta javaCompile-encoding till utf-8

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ allprojects {
 
     group = 'se.inera.intyg.common'
     version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
+    
+    compileJava.options.encoding = 'UTF-8'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
