--- a/ts/ts-diabetes/build.gradle
+++ b/ts/ts-diabetes/build.gradle
@@ -6,4 +6,6 @@ dependencies {
   compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
   compile "com.google.auto.value:auto-value:${autovalueVersion}"
 annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
+
+  testCompile "org.assertj:assertj-core:${assertjVersion}"
 }
