--- a/ts/ts-tstrk1062/build.gradle
+++ b/ts/ts-tstrk1062/build.gradle
@@ -2,6 +2,9 @@ dependencies {
   compile project(':ts-parent')
   compile project(":common-pdf")
 
+  testCompile "org.assertj:assertj-core:${assertjVersion}"
+
   compileOnly "com.google.auto.value:auto-value:${autovalueVersion}"
-  apt "com.google.auto.value:auto-value:${autovalueVersion}"
+  compile "com.google.auto.value:auto-value:${autovalueVersion}"
+  annotationProcessor "com.google.auto.value:auto-value:${autovalueVersion}"
 }
